@@ -5,6 +5,7 @@ import org.apache.commons.lang3.StringUtils;
 
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -12,37 +13,25 @@ import java.util.Map;
 
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
-
 /**
- * Tmdb Api URL Builder
+ * Tmdb Api URL Builder.
  *
  * @author Holger Brandl
  */
 public class ApiUrl {
-
-    /*
-     * TmdbApi API Base URL
-     */
-    private static final String TMDB_API_BASE = "https://api.themoviedb.org/3/";
+    private static final String TMDB_API_BASE_URL = "https://api.themoviedb.org/3/";
 
     private static final String APPEND_TO_RESPONSE = "append_to_response";
 
     private final String baseUrl;
 
-    private final Map<String, String> params = new HashMap<String, String>();
+    private final Map<String, String> params = new HashMap<>();
 
-//
-//    public ApiUrl(String apiKey, Object... urlElements) {
-//        this(urlElements);
-//
-//        assert StringUtils.isNotBlank(apiKey);
-//        addParam(PARAM_API_KEY, apiKey);
-//
-//    }
-
-
+    /**
+     * Constructor.
+     */
     public ApiUrl(Object... urlElements) {
-        StringBuilder baseUrlBuilder = new StringBuilder(TMDB_API_BASE);
+        StringBuilder baseUrlBuilder = new StringBuilder(TMDB_API_BASE_URL);
 
         for (int i = 0; i < urlElements.length; i++) {
             baseUrlBuilder.append(urlElements[i]);
@@ -55,36 +44,50 @@ public class ApiUrl {
         baseUrl = baseUrlBuilder.toString();
     }
 
-
+    /**
+     * Builds the URL.
+     *
+     * @return the URL.
+     */
     public URL buildUrl() {
         StringBuilder urlBuilder = new StringBuilder(baseUrl);
 
         try {
 
-            if (params.size() > 0) {
+            if (!params.isEmpty()) {
                 List<String> keys = new ArrayList<String>(params.keySet());
                 for (int i = 0; i < keys.size(); i++) {
                     urlBuilder.append(i == 0 ? "?" : "&");
                     String paramName = keys.get(i);
 
                     urlBuilder.append(paramName).append("=");
-                    urlBuilder.append(URLEncoder.encode(params.get(paramName), "UTF-8"));
+                    urlBuilder.append(URLEncoder.encode(params.get(paramName), StandardCharsets.UTF_8));
                 }
             }
 
             return new URL(urlBuilder.toString());
-
-        } catch (Throwable e) {
+        }
+        catch (Throwable e) {
             throw new RuntimeException(e);
         }
     }
 
-
+    /**
+     * Adds a parameter to the API url.
+     *
+     * @param name the key
+     * @param value the value
+     */
     public void addParam(String name, Object value) {
         addParam(name, value.toString());
     }
 
-
+    /**
+     * Adds a parameter to the API url.
+     *
+     * @param name the key
+     * @param value the value
+     */
     public void addParam(String name, String value) {
         if (params.containsKey(name)) {
             throw new RuntimeException("paramater '" + name + "' already defined");
@@ -103,25 +106,28 @@ public class ApiUrl {
         params.put(name, value);
     }
 
-
     /**
-     * Add argument
+     * Adds a parameter to the API url.
+     *
+     * @param key the key
+     * @param value the value
      */
     public void addParam(String key, int value) {
         addParam(key, Integer.toString(value));
     }
 
-
     /**
-     * Add argument
+     * Adds a parameter to the API url.
+     *
+     * @param key the key
+     * @param value the value
      */
     public void addParam(String key, boolean value) {
         addParam(key, Boolean.toString(value));
     }
 
-
     /**
-     * Convenience wrapper around addArgument
+     * Convenience wrapper around addArgument.
      *
      * @param appendToResponse Comma separated, any movie method
      */
@@ -133,14 +139,22 @@ public class ApiUrl {
         addParam(APPEND_TO_RESPONSE, StringUtils.join(appendToResponse, ","));
     }
 
-
+    /**
+     * Adds the page parameter to the API url.
+     *
+     * @param page the page number
+     */
     public void addPage(Integer page) {
         if (page != null && page > 0) {
             addParam(AbstractTmdbApi.PARAM_PAGE, page);
         }
     }
 
-
+    /**
+     * Adds the language to the API url.
+     *
+     * @param language the language.
+     */
     public void addLanguage(String language) {
         if (isNotBlank(language)) {
             addParam(AbstractTmdbApi.PARAM_LANGUAGE, language);
